# ros_turtlebot_control

./: CMakeLists.txt  README.md  config.yaml  lib_turtlebot.py  move_turtle_to_pose.py  package.xml  run_turtlebot_control_server.py  turtle_lib.py  turtlebot_client.py  turtlebot_server.py
config/: config.yaml
doc/: dependencies.md
doc/for_myself_read_only/: readme2_tests.md  system_chart.pptx  video2gif.sh
srv/: GetPose.srv  MoveToPoint.srv  MoveToRelativePoint.srv  MoveToRelativePose.srv  SetPose.srv
utils/: commons.py  geo_maths.py  pid_controller.py  turtle.py
